# LivingSpaceToolkit

./: .gitignore  CatherdralCalcs.py  CommonCalcs.py  LICENSE  LivingspaceToolkitClass.py  LivingspaceToolkitMain.ui  Livingspace_Toolkit.py  README.md  StudioCalcs.py  UI_rc.py  Units.py  build.json  pyproject.toml  requirements.txt  test_CommonCalcs.py  test_LivingspaceToolkitClass.py  test_Units.py
.github/workflows/: ci.yml
livingspacetoolkit/: LivingspaceToolkitMain.ui  Livingspace_Toolkit.py  UI.qrc  UI_rc.py  main.py  main_window.py  theme_manager.py
livingspacetoolkit/Resource/: resources.qrc  resources_rc.py  theme_dark.qss  theme_light.qss
livingspacetoolkit/config/: config.py  log_config.json  log_config.py
livingspacetoolkit/controllers/: base_sunroom_controller.py  cathedral_controller.py  main_window_controller.py  results_controller.py  scenarios_controller.py  studio_controller.py  tabs_controller.py
livingspacetoolkit/lib/: LivingspaceToolkitClass.py  Units.py  __init__.py  base_scenario_class.py  livingspacetoolkit_enums.py  scenario_drip_edge_peak_height.py  scenario_drip_edge_pitch.py  scenario_max_height_pitch.py  scenario_soffit_height_peak_height.py  scenario_soffit_height_pitch.py  scenario_wall_height_peak_height.py  scenario_wall_height_pitch.py  sunroom_builder.py  toolkit_enums.py  toolkit_input_class.py  toolkit_length.py  toolkit_length_class.py  toolkit_pitch.py
livingspacetoolkit/models/: __init__.py  results_model.py  roof_model.py  sunroom_model.py  toolkit_state_model.py
livingspacetoolkit/utils/: helpers.py
livingspacetoolkit/views/: __init__.py  cathedral_roof_component.py  cathedral_roof_view.py  cathedral_view.py  cathedral_wall_height_component.py  cathedral_wall_height_view.py  floor_plan_component.py  floor_plan_view.py  results_view.py  roof_end_cuts_component.py  roof_end_cuts_view.py  roof_pitch_component.py  roof_pitch_view.py  roofing_type_component.py  roofing_type_view.py  scenarios_view.py  studio_roof_component.py  studio_roof_view.py  studio_view.py  studio_wall_height_view.py  tabs_view.py
src/: LivingspaceToolkitMain.ui  main.py  main_window.py
src/Resource/: resources.qrc
src/lib/: LivingspaceToolkitClass.py
src/views/: roof_pitch_component.py  roofing_type_component.py  scenarios_view.py
tests/: old_test_LivingspaceToolkitClass.py  old_test_Units.py  test_LivingspaceToolkitClass.py  test_Units.py
tests/core/: test_scenario.py  test_sunroom_builder.py  test_toolkit_input_class.py  test_toolkit_length.py  test_toolkit_pitch.py  (+1 more)
(+12 files in other folders)
