[project]
name = "livingspacetoolkit"
version = "1.9.5"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "ordered-set>=4.1.0",
    "pytest>=9.0.1",
    "zstandard>=0.25.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["livingspacetoolkit"]

[project.gui-scripts]
livingspacetoolkit = "livingspacetoolkit.main:main"
