[project]
name = "livingspacetoolkit"
version = "2.0.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.5.1",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "ordered-set>=4.1.0",
    "pytest>=9.0.1",
    "zstandard>=0.25.0",
    "ruff>=0.14.8",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]

testpaths = "tests"

qt_api="pyside6"

markers = [
    "unit: Individual units with no dependencies besides enums",
    "integration: Test involving multiple components working together",
    "gui: Tests on UI/UX",
    "e2e: Full system tests (scenarios)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["livingspacetoolkit"]

[project.gui-scripts]
livingspacetoolkit = "livingspacetoolkit.main:main"
